# palette_scrapper

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: scraper.py
frontend/palette-scraper/: index.html
frontend/palette-scraper/src/: App.vue
frontend/palette-scraper/src/components/: DataTable.vue  HelloWorld.vue  Input.vue
